Bike Map: make sure equal spacing from instructor to set of bikes on left and right side

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -2211,10 +2211,6 @@ body {
         width: 270px;
       }
 
-      @include breakpoint(md) {
-        width: 328px;
-      }
-
       .image{
         left: 50%;
         border-radius: 150px;
